--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,6 @@
-FROM python:3.11-slim
+FROM python:3.10-slim
 WORKDIR /app
-# OpenCV依存
+# OpenCV依存とビルドツール
 RUN apt-get update && apt-get install -y \
     libglib2.0-0 \
     libsm6 \
@@ -8,10 +8,16 @@ RUN apt-get update && apt-get install -y \
     libxrender-dev \
     libgomp1 \
     libgl1 \
+    gcc \
+    g++ \
+    python3-dev \
     && rm -rf /var/lib/apt/lists/*
 
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
+
+# ビルドツールを削除してイメージサイズを削減（オプション）
+# RUN apt-get purge -y gcc g++ python3-dev && apt-get autoremove -y
 
 COPY . .
 
