--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -20,8 +20,6 @@ h11==0.16.0
 idna==3.11
 importlib_metadata==8.7.0
 importlib_resources==6.5.2
-jax==0.4.30
-jaxlib==0.4.30
 joblib==1.5.2
 kiwisolver==1.4.7
 lazy_loader==0.4
@@ -32,9 +30,9 @@ mediapipe==0.10.14
 ml_dtypes==0.5.3
 msgpack==1.1.2
 numba==0.60.0
-numpy==2.0.2
-opencv-contrib-python==4.12.0.88
-opencv-python==4.12.0.88
+numpy==1.24.3
+opencv-contrib-python==4.9.0.80
+opencv-python==4.9.0.80
 opt_einsum==3.4.0
 packaging==25.0
 pillow==11.3.0
@@ -51,7 +49,7 @@ python-multipart==0.0.20
 python-socketio==5.14.2
 requests==2.32.5
 scikit-learn==1.6.1
-scipy==1.13.1
+scipy==1.8.1
 simple-websocket==1.1.0
 six==1.17.0
 sniffio==1.3.1
@@ -67,3 +65,4 @@ uvicorn==0.38.0
 websockets==15.0.1
 wsproto==1.2.0
 zipp==3.23.0
+py-feat==0.5.1
