--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
+    "lucide-react": "^0.548.0",
     "next": "15.5.6",
     "react": "19.1.0",
+    "react-circular-progressbar": "^2.2.0",
     "react-dom": "19.1.0",
     "socket.io-client": "^4.8.1"
   },
