--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.12.2",
     "lucide-react": "^0.548.0",
     "next": "15.5.6",
+    "qrcode.react": "^4.2.0",
     "react": "19.1.0",
     "react-circular-progressbar": "^2.2.0",
     "react-dom": "19.1.0",
